--- a/Website/aboutUs.html
+++ b/Website/aboutUs.html
@@ -77,23 +77,26 @@
 
     <body>
 
-        <div class="container">
-
-            <div class="row">
-
-
-                <div class="col">
-
-                    <h1>Meet The Team</h1>
-                </div>
-
-            </div>
-
-
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 text-center">
+            <h1 style="margin-top: 50px;text-decoration: underline;text-underline-offset: 15px; margin-bottom:30px;">Meet The Chapter</h1>
+          </div>
+          <div class="col">
+            <img class="headshot" src="images/Headshot Letrell.jpg" alt="Letrell Headshot">
+            <p class="headshot-text">Letrell Harris recently graduated Morehouse College Magna Cum Laude with a Bachelor of Science degree in 
+              physics and is currently a second year graduate student at Michigan State University (MSU). He currently conducts 
+              research in high energy physics at MSU working with the High Altitude Water Cherenkov Collaboration. 
+              He is well traveled, his physics has taken him to the University of Hawaii Mãnoa, Michigan State University, 
+              Thomas Jefferson National Laboratory, Lawrence Livermore National Lab, and Los Alamos National Laboratory to name a few. He 
+              was a Ronald McNair Scholar, has served as a Charter Member and Chapter President of The Hampton Roads Chapter of The National Society of Black Physicists (NSBP), 
+              The Morehouse College Chapter of NSBP, and the Spartan Chapter of NSBP. He was an ambassador for the Morehouse Center for Excellence in Education, 
+              a mentor for the Harlem Gallery of Science and NSBP Mentorship Program, a member of the Student Council of NSBP, is currently a MSU College of Natural Science Fellowship recipient,
+              a MSU University Enrichment Fellowship Recipient, and a member of Alpha Phi Alpha Fraternity Incorporated. In his free time, he practices Brazilian Jiu Jitsu and mentors the youth both on and off his campus. </p>
+          </div>
         </div>
+      </div>
 
-        <script src="particles.js-master/particles.js"></script>
-        <script src="particles.js-master/demo/js/app.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
